<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Fragment.ChooseLangFragment"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

<androidx.appcompat.widget.AppCompatImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_dictionary"
    />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dictionary"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="@dimen/textsize_20"
        android:textColor="#000"
        android:textStyle="bold"
        android:fontFamily="@font/georgia"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_persian"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/georgia"
        android:layout_margin="@dimen/mrg_5"
        android:paddingLeft="@dimen/pad_10"
        android:paddingRight="@dimen/pad_10"
        android:text="@string/persian"
        android:textColor="#ffffff"
        android:textSize="@dimen/textsize_18"
        android:textAllCaps="false"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_english"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/georgia"
        android:layout_margin="@dimen/mrg_5"
        android:paddingLeft="@dimen/pad_10"
        android:paddingRight="@dimen/pad_10"
        android:text="@string/english"
        android:textColor="@color/purple"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:textAllCaps="false"
         />

</LinearLayout>