<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f1f1f1">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_word_page"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_light"
        app:title="Word Details"
        android:fontFamily="@font/georgia"
        app:menu="@menu/menu_word_page"
        >
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_word_page"
        android:layout_margin="@dimen/mrg_5"
        android:padding="@dimen/pad_5"
        android:textSize="@dimen/textsize_25"
        android:text="@string/computer"
        android:fontFamily="@font/georgia"
        android:textColor="#000"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/meaning_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/word"
        android:layout_margin="@dimen/mrg_5"
        android:padding="@dimen/pad_5"
        android:textSize="@dimen/textsize_20"
        android:text="@string/meaning"
        android:fontFamily="@font/georgia"
        android:textColor="@color/purple"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/word"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/meaning_view"
        android:layout_toRightOf="@+id/meaning_view"
        android:fontFamily="@font/georgia"
        android:padding="@dimen/pad_5"
        tools:text="@tools:sample/avatars"
        android:textColor="#000000"
        android:textSize="@dimen/textsize_20" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/synonym_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meaning"
        android:layout_margin="@dimen/mrg_5"
        android:padding="@dimen/pad_5"
        android:textSize="@dimen/textsize_20"
        android:text="@string/synonym"
        android:fontFamily="@font/georgia"
        android:textColor="@color/purple"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/synonym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meaning"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/meaning_view"
        android:layout_toRightOf="@+id/meaning_view"
        android:fontFamily="@font/georgia"
        android:padding="@dimen/pad_5"
        tools:text="@tools:sample/avatars"
        android:textColor="#000000"
        android:textSize="@dimen/textsize_20" />
</RelativeLayout>